Adding Progress function 	modified:   orte/mca/rml/ofi/Makefile.am 	modified:   orte/mca/rml/ofi/rml_ofi.h 	modified:   orte/mca/rml/ofi/rml_ofi_component.c 	new file:   orte/mca/rml/ofi/rml_ofi_send.c

--- a/orte/mca/rml/ofi/Makefile.am
+++ b/orte/mca/rml/ofi/Makefile.am
@@ -20,7 +20,9 @@
 
 sources = \
 	rml_ofi.h \
-	rml_ofi_component.c
+	rml_ofi_request.h \
+	rml_ofi_component.c \
+	rml_ofi_send.c
 
 # Make the output library in this directory, and name it either
 # mca_<type>_<name>.la (for DSO builds) or libmca_<type>_<name>.la
