Fix the order during startup of a daemon so the pmix_server doesn't start until after the RML framework is available. Use OPAL_MODEX for the exchange during orte_init to ensure that we actually commit the values prior to doing the fence. Disable the OFI RML component for daemons for now as they cannot "put" their connection info.

--- a/.gitignore
+++ b/.gitignore
@@ -449,6 +449,8 @@ orte/test/system/pmi_abort
 orte/test/system/opal_hwloc
 orte/test/system/opal_db
 orte/test/system/ulfm
+orte/test/system/ofi_query_test
+orte/test/system/ofi_stress
 
 orte/tools/orte-checkpoint/orte-checkpoint
 orte/tools/orte-checkpoint/orte-checkpoint.1
